--- a/css/home-content.css
+++ b/css/home-content.css
@@ -18,6 +18,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -40,21 +41,15 @@
   text-shadow: black 0px 0px 3px;
 }
 
-.big-subject-container a {
-  width: 220px;
-  height: 50px;
-  font-size: 1.5rem;
+.big-subject-container p {
+  width: 80%;
+  height: fit-content;
+  font-size: 1rem;
   border-radius: 5px;
   color: white;
-  background-color: rgb(47, 47, 47);
-  text-decoration: none;
-  cursor: pointer;
-  transition: all 0.2s ease-in-out;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  text-align: center;
   margin-bottom: 100px;
-  box-shadow: 0 1px 3px 0 rgb(0 0 0 / 10%), 0 4px 8px 3px rgb(0 0 0 / 5%);
+  text-shadow: black 0px 0px 3px;
 }
 
 .big-subject-container a:hover {
@@ -91,7 +86,6 @@
   margin-bottom: 100px;
   border-radius: 5px;
   width: 100%;
-  height: fit-content;
   box-shadow: 0 1px 3px 0 rgb(0 0 0 / 10%), 0 4px 8px 3px rgb(0 0 0 / 5%);
 }
 
@@ -234,7 +228,7 @@
     margin-top: 80px;
     margin-bottom: 10px;
   }
-  .big-subject-container a {
+  .big-subject-container p {
     font-size: 1rem;
     margin-bottom: 80px;
   }
@@ -310,11 +304,11 @@
     margin-top: 50px;
     margin-bottom: 5px;
   }
-  .big-subject-container a {
+  .big-subject-container p {
     font-size: 0.8rem;
     margin-bottom: 50px;
-    height: 30px;
-    width: 100px;
+
+    width: 90%;
   }
   .content-container .subject-title {
     font-size: 1rem;
@@ -324,10 +318,18 @@
     margin-bottom: 0px;
     width: 90%;
   }
+  .small-subject-container .card {
+    flex-direction: column;
+  }
   .image-content {
     width: 100%;
-    height: 15vh;
+    height: 20vh;
     border-radius: 5px 5px 0px 0px;
+  }
+  .background-image {
+    width: 100%;
+    height: auto;
+    top: -50%;
   }
   .publication-details {
     padding: 20px;
@@ -347,6 +349,7 @@
   }
   .post-content {
     padding: 20px 20px;
+    /* flex-basis: 50%; */
   }
   .card-title {
     margin-bottom: 5px;
@@ -362,5 +365,13 @@
   }
   .card-action a {
     font-size: 0.8rem;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .background-image {
+    width: 100%;
+    height: auto;
+    top: -15%;
   }
 }
